--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-  <title>portfolio</title>
+  <title>Abhishek Portfolio</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
